kubernetesNotes/pods/kuard-commandline.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-config
spec:
  containers:
    - name: test-container
      image: gcr.io/kuar-demo/kuard-amd64:1
      imagePullPolicy: Always
      command:
        - /kuard
        - "$(EXTRA_PARAM)"
