kubernetesNotes/pods/kuard-nodeselector.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: nginx
    ssd: "True"
  name: nginx-fast-storage
spec:
  template:
    metadata:
      labels:
        app: nginx
        ssd: "True"
    spec:
      nodeSelector:
        ssd: "True"
      containers: 
      - name: nginx
        image: nginx:1.10.0
