kubernetesNotes/pods/nginx-ingress.yaml
apiVersion: v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
